made small changes in dark mode background, fixed minor issues of buttons and fixed nav bar

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:Poppins, sans-serif;
+}
+a {
+    text-decoration: none;
 }
 body{
     min-height: 100vh;
@@ -329,6 +332,7 @@ nav li{
     background-color: darkslateblue;
     display: flex;
     justify-content: space-between;
+    width: 100%;
 }
 .footerContent .created{
     color: white;
@@ -373,6 +377,7 @@ nav li{
         display: flex;
         flex-direction: column;
         height: 100%;
+        width: 100%;
     }
     .footerContent .created{
         display: flex;
@@ -571,4 +576,3 @@ nav li{
     background-color: white;
     color: black;
 }
-
